src/examples/test-doubles/MockBuilderExampleTest.php.out
./tools/phpunit tests/MockBuilderExampleTest.php
PHPUnit 11.1.0 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.3.4

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 22.86 MB

There was 1 error:

1) MockBuilderExampleTest::testStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/MockBuilderExampleTest.php:14

--

1 test triggered 2 PHPUnit deprecations:

1) MockBuilderExampleTest::testStub
* MockBuilder::disableArgumentCloning() is deprecated and will be removed in PHPUnit 12 without replacement.

* MockBuilder::disallowMockingUnknownTypes() is deprecated and will be removed in PHPUnit 12 without replacement.

/path/to/tests/MockBuilderExampleTest.php:6

ERRORS!
Tests: 1, Assertions: 0, Errors: 1, Deprecations: 1.
